--- a/app/config/config.json
+++ b/app/config/config.json
@@ -11,5 +11,6 @@
     "user"        : "my_app",
     "password"    : "secret",
     "charset"     : "utf8"
-  }
+  },
+  "template-folder" : "src/Resources/views"
 }
